Updated module with solution

--- a/mod3_solution/styles/styles.css
+++ b/mod3_solution/styles/styles.css
@@ -9,6 +9,26 @@ input[type="text"] {
   float: left;
   margin-left: 10px;
 }
+.found-style{
+  display: block;
+  clear: both;
+}
+.dctrl-warning{
+  color: red;
+  font-weight: bold;
+}
+.dctrl-li{
+  padding: 5px;
+}
+.dctrl-btn{
+    background-color: #d4b1f4;
+    border-radius: 5%;
+    border: none;
+
+}
+.dctrl-btn:hover{
+  background-color: #eddefa;
+}
 .loader {
   display: none;
   margin-left: 5px;
